--- a/OLEDInfo/OLEDInfo.csproj
+++ b/OLEDInfo/OLEDInfo.csproj
@@ -2,13 +2,41 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+	<UseWindowsForms>true</UseWindowsForms>
+	<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Win32.SystemEvents" Version="5.0.0" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
+	<PackageReference Include="Microsoft.Windows.Compatibility" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\I2CTiny\I2CTinyUSB.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="OpenHardwareMonitorLib">
-      <HintPath>..\..\..\..\repos\openhardwaremonitor\Bin\Debug\OpenHardwareMonitorLib.dll</HintPath>
+      <HintPath>..\..\OpenHardwareMonitorLib\OpenHardwareMonitorLib\bin\Release\net5.0\OpenHardwareMonitorLib.dll</HintPath>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
